# EchoMind

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  MANUAL_TESTS.md  Makefile  README.md  ROADMAP.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/dashboard/: app.py
apps/worker/: main.py
docs/: architecture.md  ethics.md  roadmap.md
echomind/api/: dependencies.py  routes.py
echomind/core/: celery_app.py  enums.py  settings.py  utils.py
echomind/cues/: contracts.py  contracts_service.py  interfaces.py  planner.py  service.py
echomind/db/: __init__.py  enums.py  session.py
echomind/experiments/: __init__.py  compare.py  models.py  reports.py  runner.py
echomind/media/: __init__.py  interfaces.py  manifests.py  renderer.py  slideshow.py  tts.py
echomind/memory/: service.py
echomind/scoring/: __init__.py  composite.py  explain.py  interfaces.py  metrics.py  models.py  pipeline.py  service.py
echomind/tribe/: __init__.py  aggregates.py  client.py  infer.py  io.py  preprocess.py
migrations/: env.py
migrations/versions/: 20260401_0001_initial_domain_models.py
remembra/api/: dependencies.py  routes.py
remembra/core/: celery_app.py  (+2 more)
scripts/: run_demo_comparison.py  seed_demo_data.py
tests/: conftest.py  test_api_health.py  test_api_memories.py  test_cue_contracts.py  test_cue_planner.py  test_dashboard_shell.py  test_experiment_compare.py  test_media_renderer.py  test_models.py  test_schemas.py  test_scoring.py  test_seed_script.py  test_tribe_integration.py
(+17 files in other folders)
